@@ -18,8 +18,10 @@
   * Improved Array performance where finalizes object and expands internal
     memory. 15% faster.
   * Fixed bug where ARC's rules related to method names starting with `new` or
-    containing `copy` or `Copy` where not being followed and objects returned
-    from Objective-C methods that matched these rules were not autoreleased.
+    containing `copy` or `Copy` where not being followed. This lead to objects
+    returned from Objective-C methods that matched these rules not being
+    autoreleased and objects returned from Ruby to Objective-C not being
+    retained.
 
 = RubyMotion 2.16 =
 
